--- a/product.html
+++ b/product.html
@@ -80,7 +80,7 @@
 
 
  
-  <div class="thumbnail" style="width:445px;margin-top:20px;margin-left:20px;">
+  <div class="thumbnail" style="margin-top:20px;margin-left:5px;">
    
 
        
