--- a/product.html
+++ b/product.html
@@ -80,7 +80,7 @@
 
 
  
-  <div class="thumbnail" style="margin-top:20px;margin-left:5px;">
+  <div class="thumbnail" style="margin-top:20px;margin-left:5px;margin-right:5px; margin-bottom:15px;">
    
 
        
@@ -184,7 +184,9 @@ placeholder="Write a comment "></textarea>
 <div>&nbsp;</div>
  
 
-
+  
+</div> 
+</div>
 
   
 </div> 
