--- a/product.html
+++ b/product.html
@@ -121,11 +121,14 @@ Model:Optiplex 745<br>
 <br>   
        
 
-        <p> <img src="http://lorempixel.com/200/100/" class="img-circle"style="width:80px;height:80px;">&nbsp;  <p style="margin-top:-76px;margin-left:105px;">Juan Carlo</p></span><Br>
-      <a href="profile.html"type="button"class="btn btn-warning " style="margin-left:100px;margin-top:-30px;"><b>View my Store</b></a>
+        <p> <center><img src="images/dp1.jpg" class="img-circle"style="width:80px;height:80px;"><Br> 
+          <p>Gian Javelona</p>
+
+
+      <a href="profile.html"type="button"class="btn btn-warning " style="margin-top:5px;"><b>View my Store</b></a>
       
    
-<div style="margin-left:35px;">
+<div style="margin-left:35px;margin-top:20px;">
 
      <a href="sms:09189247810" style="width:100px;"class="btn widget uib_w_9 d-margins btn-primary btn-lg" data-uib="twitter%20bootstrap/button" data-ver="1"><b>SMS</b></a>
 
@@ -148,7 +151,7 @@ placeholder="Write a comment "></textarea>
 <div>&nbsp;</div>
 
 <div class="thumbnail" style="width:345px; margin-top:-10px;">
-      <p> <img src="http://lorempixel.com/200/100/" class="img-circle"style="width:30px;height:30px;">&nbsp;  <p style="margin-top:-36px;margin-left:35px;">Juan Carlo</p></span><Br>
+      <p> <img src="images/dp1.jpg" class="img-circle"style="width:30px;height:30px;">&nbsp;  <p style="margin-top:-36px;margin-left:35px;">Juan Carlo</p></span><Br>
        <div class="caption">
         <h4>Ganda ng product mo boss </b></h3>
         <div>&nbsp;</div>
