--- a/product.html
+++ b/product.html
@@ -140,7 +140,7 @@ Model:Optiplex 745<br>
 </div>
 
 
-<div class="thumbnail" style="margin-top:20px;margin-left:10px;margin-right:10px; margin-bottom:15px;">
+<div class="thumbnail" style="margin-top:20px;margin-left:10px;margin-right:10px;  ">
  <div  style="margin-left:20px;">
 <h4 style="color:black; line-height:"><b>Comments</b></h3>
 <br>  
@@ -172,26 +172,15 @@ placeholder="Write a comment "></textarea>
 <div class="thumbnail" style="width:345px; margin-top:-10px;">
       <p> <img src="images/dp3.jpg" class="img-circle"style="width:30px;height:30px;margin-left:20px;">&nbsp;  <p style="margin-top:-36px;margin-left:55px;">Justin Isiderio</p></span><Br>
        <div class="caption">
-        <h6 style="margin-left:40px;">Ang daling nyang kausap salamat sa magandang transaction </b></h3>
+        <h6 style="margin-left:40px;"><b>Ang daling nyang kausap salamat sa magandang transaction </b></h3>
          
        <hr>
       </div>
-  </div>
+  </div></div>
 
      
 
-<div>&nbsp;</div>
-<div>&nbsp;</div>
-<div>&nbsp;</div>
- 
-
-  
-</div> 
-</div>
-
-  
-</div> 
-</div>
+<br>
 
   </body>
 </main> <!-- cd-main-content -->
