--- a/productfeed.html
+++ b/productfeed.html
@@ -70,13 +70,13 @@ Weight:10.1 lbs
   <div class="thumbnail" >
     <p> <img src="images/dp3.jpg" class="img-circle"style="width:30px;height:30px; float:left;"><p style="float:left;margin-top:3px;color:orange; "> &nbsp;&nbsp;@Mark Concio</b></p><p style="font-size:12px;float:left;margin-top:25px;margin-left:-88px;">3h ago</p></span>
      <img src="images/b2.jpg" style="height:300px;width:100%;"><br>
-      <img src="images/likeicon.png" style="height:30px; float:left;"><img src="images/commenticon.png" style="height:30px; float:left; margin-left:10px;"><p style="font-size:15px;margin-left:220px;margin-top:5px;">PHP 7120</b>
+     <img src="images/likeicon.png" style="height:30px; float:left;"><img src="images/commenticon.png" style="height:30px; float:left; margin-left:10px;"><p style="font-size:15px;margin-left:240px;margin-top:5px;">PHP 1750</b>
          &nbsp; &nbsp; 
-        <img src="images/map.png" class="img-circle"style="width:25px;height:25px; ">Makati</p></a>
+        <img src="images/map.png" class="img-circle"style="width:25px;height:25px; ">QC</p></a>
        <hr style="margin-top:-1px;">
-        <img src="images/likeicon.png" style="height:20px; margin-left:3px;"><p style="margin-left:-293px; font-size:12px; margin-top:-15px;">52likes</p>
-        <p style="float:left;color:orange; margin-top:1px;margin-left:-10px; "> &nbsp;&nbsp;@Mark Concio</b></p>
-        <p style="margin-top:50px; text-align:left;">
+          <img src="images/likeicon.png" style="height:20px; margin-left:-373px;"><p style="margin-left:-293px; font-size:12px; margin-top:-15px;">52likes</p>
+        <p style="float:left;color:orange; margin-top:1px;margin-left:-10px; "> &nbsp;&nbsp;@Gian Javelona</b></p>
+        <p style="margin-top:45px; text-align:left;">
           For Sale:
           Processor: NVIDIA® Tegra® 4 T40S (1.8 GHz, 1MB, 4-core)
 Operating System: Android™ 4.2
@@ -94,21 +94,22 @@ Weight:10.1 lbs
 
        
       </div>
+        </div>
 
 
 
 
  <a href="product.html" style="text-decoration:none;color:grey;">
-  <div class="thumbnail" style="width:395px;">
+  <div class="thumbnail" >
     <p> <img src="images/dp3.jpg" class="img-circle"style="width:30px;height:30px; float:left;"><p style="float:left;margin-top:3px;color:orange; "> &nbsp;&nbsp;@Mark Concio</b></p><p style="font-size:12px;float:left;margin-top:25px;margin-left:-88px;">3h ago</p></span>
      <img src="images/b3.jpg" style="height:300px;width:100%;"><br>
-      <img src="images/likeicon.png" style="height:30px; float:left;"><img src="images/commenticon.png" style="height:30px; float:left; margin-left:10px;"><p style="font-size:15px;margin-left:240px;margin-top:5px;">PHP 7750</b>
+      <img src="images/likeicon.png" style="height:30px; float:left;"><img src="images/commenticon.png" style="height:30px; float:left; margin-left:10px;"><p style="font-size:15px;margin-left:240px;margin-top:5px;">PHP 1750</b>
          &nbsp; &nbsp; 
         <img src="images/map.png" class="img-circle"style="width:25px;height:25px; ">QC</p></a>
        <hr style="margin-top:-1px;">
-        <img src="images/likeicon.png" style="height:20px; margin-left:3px;"><p style="margin-left:-293px; font-size:12px; margin-top:-15px;">22likes</p>
-        <p style="float:left;color:orange; margin-top:1px;margin-left:-10px; "> &nbsp;&nbsp;@Mark Concio</b></p>
-        <p style="margin-top:50px; text-align:left;">
+          <img src="images/likeicon.png" style="height:20px; margin-left:-373px;"><p style="margin-left:-293px; font-size:12px; margin-top:-15px;">52likes</p>
+        <p style="float:left;color:orange; margin-top:1px;margin-left:-10px; "> &nbsp;&nbsp;@Gian Javelona</b></p>
+        <p style="margin-top:45px; text-align:left;">
           For Sale:
           Processor: NVIDIA® Tegra® 4 T40S (1.8 GHz, 1MB, 4-core)
 Operating System: Android™ 4.2
@@ -126,6 +127,7 @@ Weight:10.1 lbs
 
        
       </div>
+        </div>
 
 
 
