--- a/productfeed.html
+++ b/productfeed.html
@@ -65,7 +65,7 @@ Weight:10.1 lbs
 
   
 <a href="product.html" style="text-decoration:none;color:grey;">
-  <div class="thumbnail" >
+  <div class="thumbnail" style="margin-top:-15px;" >
     <p> <img src="images/dp1.jpg" class="img-circle"style="width:30px;height:30px; float:left;"><p style="float:left;margin-top:3px;color:orange; "> &nbsp;&nbsp;@Gian Javelona</b></p><p style="font-size:12px;float:left;margin-top:25px;margin-left:-88px;">3h ago</p></span>
     <div style="margin-left:10px;">
      <img src="images/b2.jpg" style="height:300px;width:100%;"><br>
@@ -98,7 +98,7 @@ Weight:10.1 lbs
 
 
 <a href="product.html" style="text-decoration:none;color:grey;">
-  <div class="thumbnail" >
+  <div class="thumbnail" style="margin-top:-15px;" >
     <p> <img src="images/dp1.jpg" class="img-circle"style="width:30px;height:30px; float:left;"><p style="float:left;margin-top:3px;color:orange; "> &nbsp;&nbsp;@Gian Javelona</b></p><p style="font-size:12px;float:left;margin-top:25px;margin-left:-88px;">3h ago</p></span>
     <div style="margin-left:10px;">
      <img src="images/b3.jpg" style="height:300px;width:100%;"><br>
@@ -131,7 +131,7 @@ Weight:10.1 lbs
 
 
 <a href="product.html" style="text-decoration:none;color:grey;">
-  <div class="thumbnail" >
+   <div class="thumbnail" style="margin-top:-15px;" >
     <p> <img src="images/dp1.jpg" class="img-circle"style="width:30px;height:30px; float:left;"><p style="float:left;margin-top:3px;color:orange; "> &nbsp;&nbsp;@Gian Javelona</b></p><p style="font-size:12px;float:left;margin-top:25px;margin-left:-88px;">3h ago</p></span>
     <div style="margin-left:10px;">
      <img src="images/b4.jpg" style="height:300px;width:100%;"><br>
@@ -163,7 +163,7 @@ Weight:10.1 lbs
 
 
 <a href="product.html" style="text-decoration:none;color:grey;">
-  <div class="thumbnail" >
+  <div class="thumbnail" style="margin-top:-15px;" >
     <p> <img src="images/dp1.jpg" class="img-circle"style="width:30px;height:30px; float:left;"><p style="float:left;margin-top:3px;color:orange; "> &nbsp;&nbsp;@Gian Javelona</b></p><p style="font-size:12px;float:left;margin-top:25px;margin-left:-88px;">3h ago</p></span>
     <div style="margin-left:10px;">
      <img src="images/b5.jpg" style="height:300px;width:100%;"><br>
@@ -197,7 +197,7 @@ Weight:10.1 lbs
 
 
  <a href="product.html" style="text-decoration:none;color:grey;">
-  <div class="thumbnail" >
+  <div class="thumbnail" style="margin-top:-15px;" >
     <p> <img src="images/dp1.jpg" class="img-circle"style="width:30px;height:30px; float:left;"><p style="float:left;margin-top:3px;color:orange; "> &nbsp;&nbsp;@Gian Javelona</b></p><p style="font-size:12px;float:left;margin-top:25px;margin-left:-88px;">3h ago</p></span>
     <div style="margin-left:10px;">
      <img src="images/b6.jpg" style="height:300px;width:100%;"><br>
@@ -230,7 +230,7 @@ Weight:10.1 lbs
 
 
  <a href="product.html" style="text-decoration:none;color:grey;">
-  <div class="thumbnail" >
+   <div class="thumbnail" style="margin-top:-15px;" >
     <p> <img src="images/dp1.jpg" class="img-circle"style="width:30px;height:30px; float:left;"><p style="float:left;margin-top:3px;color:orange; "> &nbsp;&nbsp;@Gian Javelona</b></p><p style="font-size:12px;float:left;margin-top:25px;margin-left:-88px;">3h ago</p></span>
     <div style="margin-left:10px;">
      <img src="images/b7.jpg" style="height:300px;width:100%;"><br>
@@ -261,7 +261,7 @@ Weight:10.1 lbs
         </div>
 
   <a href="product.html" style="text-decoration:none;color:grey;">
-  <div class="thumbnail" >
+   <div class="thumbnail" style="margin-top:-15px;" >
     <p> <img src="images/dp1.jpg" class="img-circle"style="width:30px;height:30px; float:left;"><p style="float:left;margin-top:3px;color:orange; "> &nbsp;&nbsp;@Gian Javelona</b></p><p style="font-size:12px;float:left;margin-top:25px;margin-left:-88px;">3h ago</p></span>
     <div style="margin-left:10px;">
      <img src="images/b8.jpg" style="height:300px;width:100%;"><br>
@@ -293,7 +293,7 @@ Weight:10.1 lbs
 
 
   <a href="product.html" style="text-decoration:none;color:grey;">
-  <div class="thumbnail" >
+ <div class="thumbnail" style="margin-top:-15px;" >
     <p> <img src="images/dp1.jpg" class="img-circle"style="width:30px;height:30px; float:left;"><p style="float:left;margin-top:3px;color:orange; "> &nbsp;&nbsp;@Gian Javelona</b></p><p style="font-size:12px;float:left;margin-top:25px;margin-left:-88px;">3h ago</p></span>
     <div style="margin-left:10px;">
      <img src="images/b9.jpg" style="height:300px;width:100%;"><br>
