--- a/productfeed.html
+++ b/productfeed.html
@@ -65,11 +65,11 @@ Weight:10.1 lbs
 
   
 <a href="product.html" style="text-decoration:none;color:grey;">
-  <div class="thumbnail" style="margin-top:-15px;" >
+  <div class="thumbnail" >
     <p> <img src="images/dp1.jpg" class="img-circle"style="width:30px;height:30px; float:left;"><p style="float:left;margin-top:3px;color:orange; "> &nbsp;&nbsp;@Gian Javelona</b></p><p style="font-size:12px;float:left;margin-top:25px;margin-left:-88px;">3h ago</p></span>
-    <div style="margin-left:10px;">
+    <div style="margin-left:10px;margin-right:10px;">
      <img src="images/b2.jpg" style="height:300px;width:100%;"><br>
-      <img src="images/likeicon.png" style="height:30px; float:left;"><img src="images/commenticon.png" style="height:30px; float:left; margin-left:10px;"><p style="font-size:15px;margin-left:240px;margin-top:5px;">PHP 1750</b>
+      <img src="images/likeicon.png" style="height:30px; float:left;"><img src="images/commenticon.png" style="height:30px; float:left; margin-left:10px;"><p style="font-size:15px;margin-left:250px;margin-top:5px;">PHP 2750</b>
          &nbsp; &nbsp; 
         <img src="images/map.png" class="img-circle"style="width:25px;height:25px; ">QC</p></a>
        <hr style="margin-top:-1px;">
@@ -96,13 +96,12 @@ Weight:10.1 lbs
         </div>
 
 
-
 <a href="product.html" style="text-decoration:none;color:grey;">
-  <div class="thumbnail" style="margin-top:-15px;" >
+  <div class="thumbnail" >
     <p> <img src="images/dp1.jpg" class="img-circle"style="width:30px;height:30px; float:left;"><p style="float:left;margin-top:3px;color:orange; "> &nbsp;&nbsp;@Gian Javelona</b></p><p style="font-size:12px;float:left;margin-top:25px;margin-left:-88px;">3h ago</p></span>
-    <div style="margin-left:10px;">
+    <div style="margin-left:10px;margin-right:10px;">
      <img src="images/b3.jpg" style="height:300px;width:100%;"><br>
-      <img src="images/likeicon.png" style="height:30px; float:left;"><img src="images/commenticon.png" style="height:30px; float:left; margin-left:10px;"><p style="font-size:15px;margin-left:240px;margin-top:5px;">PHP 1750</b>
+      <img src="images/likeicon.png" style="height:30px; float:left;"><img src="images/commenticon.png" style="height:30px; float:left; margin-left:10px;"><p style="font-size:15px;margin-left:250px;margin-top:5px;">PHP 2750</b>
          &nbsp; &nbsp; 
         <img src="images/map.png" class="img-circle"style="width:25px;height:25px; ">QC</p></a>
        <hr style="margin-top:-1px;">
@@ -129,13 +128,43 @@ Weight:10.1 lbs
         </div>
 
 
-
 <a href="product.html" style="text-decoration:none;color:grey;">
-   <div class="thumbnail" style="margin-top:-15px;" >
+  <div class="thumbnail" >
     <p> <img src="images/dp1.jpg" class="img-circle"style="width:30px;height:30px; float:left;"><p style="float:left;margin-top:3px;color:orange; "> &nbsp;&nbsp;@Gian Javelona</b></p><p style="font-size:12px;float:left;margin-top:25px;margin-left:-88px;">3h ago</p></span>
-    <div style="margin-left:10px;">
+    <div style="margin-left:10px;margin-right:10px;">
      <img src="images/b4.jpg" style="height:300px;width:100%;"><br>
-      <img src="images/likeicon.png" style="height:30px; float:left;"><img src="images/commenticon.png" style="height:30px; float:left; margin-left:10px;"><p style="font-size:15px;margin-left:240px;margin-top:5px;">PHP 1750</b>
+      <img src="images/likeicon.png" style="height:30px; float:left;"><img src="images/commenticon.png" style="height:30px; float:left; margin-left:10px;"><p style="font-size:15px;margin-left:250px;margin-top:5px;">PHP 2750</b>
+         &nbsp; &nbsp; 
+        <img src="images/map.png" class="img-circle"style="width:25px;height:25px; ">QC</p></a>
+       <hr style="margin-top:-1px;">
+          <img src="images/likeicon.png" style="height:20px; margin-left:-373px;"><p style="margin-left:-293px; font-size:12px; margin-top:-15px;">52likes</p>
+        <p style="float:left;color:orange; margin-top:1px;margin-left:-10px; "> &nbsp;&nbsp;@Gian Javelona</b></p>
+        <p style="margin-top:45px; text-align:left;">
+          For Sale:
+          Processor: NVIDIA® Tegra® 4 T40S (1.8 GHz, 1MB, 4-core)
+Operating System: Android™ 4.2
+Graphics: NVIDIA® 72-core GPU
+Memory: 10GB Flash eMMC 1600 MHz
+Webcam: Integrated 720p HD webcam to stay connected
+Storage: 320GB 5400 RPM
+Audio: 2.0 Built-in stereo speakers
+Display: 19.5" HD+ LED Backlight (1600x900)
+Dimensions: (W X D X H) 19.3" x 1.3" x 12.7"
+Weight:10.1 lbs
+</p>
+<p style="float:left;margin-top:3px;color:orange; margin-top:4px;margin-left:-10px; "> &nbsp;&nbsp;@Mark Concio</b></p>:<p style="float:left;margin-top:3px; margin-top:4;margin-left:10px; "> I love this bag</b></p></p>
+
+
+       
+      </div>
+        </div>
+
+<a href="product.html" style="text-decoration:none;color:grey;">
+  <div class="thumbnail" >
+    <p> <img src="images/dp1.jpg" class="img-circle"style="width:30px;height:30px; float:left;"><p style="float:left;margin-top:3px;color:orange; "> &nbsp;&nbsp;@Gian Javelona</b></p><p style="font-size:12px;float:left;margin-top:25px;margin-left:-88px;">3h ago</p></span>
+    <div style="margin-left:10px;margin-right:10px;">
+     <img src="images/b5.jpg" style="height:300px;width:100%;"><br>
+      <img src="images/likeicon.png" style="height:30px; float:left;"><img src="images/commenticon.png" style="height:30px; float:left; margin-left:10px;"><p style="font-size:15px;margin-left:250px;margin-top:5px;">PHP 2750</b>
          &nbsp; &nbsp; 
         <img src="images/map.png" class="img-circle"style="width:25px;height:25px; ">QC</p></a>
        <hr style="margin-top:-1px;">
@@ -163,45 +192,11 @@ Weight:10.1 lbs
 
 
 <a href="product.html" style="text-decoration:none;color:grey;">
-  <div class="thumbnail" style="margin-top:-15px;" >
+  <div class="thumbnail" >
     <p> <img src="images/dp1.jpg" class="img-circle"style="width:30px;height:30px; float:left;"><p style="float:left;margin-top:3px;color:orange; "> &nbsp;&nbsp;@Gian Javelona</b></p><p style="font-size:12px;float:left;margin-top:25px;margin-left:-88px;">3h ago</p></span>
-    <div style="margin-left:10px;">
-     <img src="images/b5.jpg" style="height:300px;width:100%;"><br>
-      <img src="images/likeicon.png" style="height:30px; float:left;"><img src="images/commenticon.png" style="height:30px; float:left; margin-left:10px;"><p style="font-size:15px;margin-left:240px;margin-top:5px;">PHP 1750</b>
-         &nbsp; &nbsp; 
-        <img src="images/map.png" class="img-circle"style="width:25px;height:25px; ">QC</p></a>
-       <hr style="margin-top:-1px;">
-          <img src="images/likeicon.png" style="height:20px; margin-left:-373px;"><p style="margin-left:-293px; font-size:12px; margin-top:-15px;">52likes</p>
-        <p style="float:left;color:orange; margin-top:1px;margin-left:-10px; "> &nbsp;&nbsp;@Gian Javelona</b></p>
-        <p style="margin-top:45px; text-align:left;">
-          For Sale:
-          Processor: NVIDIA® Tegra® 4 T40S (1.8 GHz, 1MB, 4-core)
-Operating System: Android™ 4.2
-Graphics: NVIDIA® 72-core GPU
-Memory: 10GB Flash eMMC 1600 MHz
-Webcam: Integrated 720p HD webcam to stay connected
-Storage: 320GB 5400 RPM
-Audio: 2.0 Built-in stereo speakers
-Display: 19.5" HD+ LED Backlight (1600x900)
-Dimensions: (W X D X H) 19.3" x 1.3" x 12.7"
-Weight:10.1 lbs
-</p>
-<p style="float:left;margin-top:3px;color:orange; margin-top:4px;margin-left:-10px; "> &nbsp;&nbsp;@Mark Concio</b></p>:<p style="float:left;margin-top:3px; margin-top:4;margin-left:10px; "> I love this bag</b></p></p>
-
-
-       
-      </div>
-        </div>
-
-
-
-
- <a href="product.html" style="text-decoration:none;color:grey;">
-  <div class="thumbnail" style="margin-top:-15px;" >
-    <p> <img src="images/dp1.jpg" class="img-circle"style="width:30px;height:30px; float:left;"><p style="float:left;margin-top:3px;color:orange; "> &nbsp;&nbsp;@Gian Javelona</b></p><p style="font-size:12px;float:left;margin-top:25px;margin-left:-88px;">3h ago</p></span>
-    <div style="margin-left:10px;">
+    <div style="margin-left:10px;margin-right:10px;">
      <img src="images/b6.jpg" style="height:300px;width:100%;"><br>
-      <img src="images/likeicon.png" style="height:30px; float:left;"><img src="images/commenticon.png" style="height:30px; float:left; margin-left:10px;"><p style="font-size:15px;margin-left:240px;margin-top:5px;">PHP 1750</b>
+      <img src="images/likeicon.png" style="height:30px; float:left;"><img src="images/commenticon.png" style="height:30px; float:left; margin-left:10px;"><p style="font-size:15px;margin-left:250px;margin-top:5px;">PHP 2750</b>
          &nbsp; &nbsp; 
         <img src="images/map.png" class="img-circle"style="width:25px;height:25px; ">QC</p></a>
        <hr style="margin-top:-1px;">
@@ -228,13 +223,12 @@ Weight:10.1 lbs
         </div>
 
 
-
- <a href="product.html" style="text-decoration:none;color:grey;">
-   <div class="thumbnail" style="margin-top:-15px;" >
+<a href="product.html" style="text-decoration:none;color:grey;">
+  <div class="thumbnail" >
     <p> <img src="images/dp1.jpg" class="img-circle"style="width:30px;height:30px; float:left;"><p style="float:left;margin-top:3px;color:orange; "> &nbsp;&nbsp;@Gian Javelona</b></p><p style="font-size:12px;float:left;margin-top:25px;margin-left:-88px;">3h ago</p></span>
-    <div style="margin-left:10px;">
+    <div style="margin-left:10px;margin-right:10px;">
      <img src="images/b7.jpg" style="height:300px;width:100%;"><br>
-      <img src="images/likeicon.png" style="height:30px; float:left;"><img src="images/commenticon.png" style="height:30px; float:left; margin-left:10px;"><p style="font-size:15px;margin-left:240px;margin-top:5px;">PHP 1750</b>
+      <img src="images/likeicon.png" style="height:30px; float:left;"><img src="images/commenticon.png" style="height:30px; float:left; margin-left:10px;"><p style="font-size:15px;margin-left:250px;margin-top:5px;">PHP 2750</b>
          &nbsp; &nbsp; 
         <img src="images/map.png" class="img-circle"style="width:25px;height:25px; ">QC</p></a>
        <hr style="margin-top:-1px;">
@@ -261,11 +255,11 @@ Weight:10.1 lbs
         </div>
 
   <a href="product.html" style="text-decoration:none;color:grey;">
-   <div class="thumbnail" style="margin-top:-15px;" >
+  <div class="thumbnail" >
     <p> <img src="images/dp1.jpg" class="img-circle"style="width:30px;height:30px; float:left;"><p style="float:left;margin-top:3px;color:orange; "> &nbsp;&nbsp;@Gian Javelona</b></p><p style="font-size:12px;float:left;margin-top:25px;margin-left:-88px;">3h ago</p></span>
-    <div style="margin-left:10px;">
+    <div style="margin-left:10px;margin-right:10px;">
      <img src="images/b8.jpg" style="height:300px;width:100%;"><br>
-      <img src="images/likeicon.png" style="height:30px; float:left;"><img src="images/commenticon.png" style="height:30px; float:left; margin-left:10px;"><p style="font-size:15px;margin-left:240px;margin-top:5px;">PHP 1750</b>
+      <img src="images/likeicon.png" style="height:30px; float:left;"><img src="images/commenticon.png" style="height:30px; float:left; margin-left:10px;"><p style="font-size:15px;margin-left:250px;margin-top:5px;">PHP 2750</b>
          &nbsp; &nbsp; 
         <img src="images/map.png" class="img-circle"style="width:25px;height:25px; ">QC</p></a>
        <hr style="margin-top:-1px;">
@@ -293,11 +287,11 @@ Weight:10.1 lbs
 
 
   <a href="product.html" style="text-decoration:none;color:grey;">
- <div class="thumbnail" style="margin-top:-15px;" >
+  <div class="thumbnail" >
     <p> <img src="images/dp1.jpg" class="img-circle"style="width:30px;height:30px; float:left;"><p style="float:left;margin-top:3px;color:orange; "> &nbsp;&nbsp;@Gian Javelona</b></p><p style="font-size:12px;float:left;margin-top:25px;margin-left:-88px;">3h ago</p></span>
-    <div style="margin-left:10px;">
+    <div style="margin-left:10px;margin-right:10px;">
      <img src="images/b9.jpg" style="height:300px;width:100%;"><br>
-      <img src="images/likeicon.png" style="height:30px; float:left;"><img src="images/commenticon.png" style="height:30px; float:left; margin-left:10px;"><p style="font-size:15px;margin-left:240px;margin-top:5px;">PHP 1750</b>
+      <img src="images/likeicon.png" style="height:30px; float:left;"><img src="images/commenticon.png" style="height:30px; float:left; margin-left:10px;"><p style="font-size:15px;margin-left:250px;margin-top:5px;">PHP 2750</b>
          &nbsp; &nbsp; 
         <img src="images/map.png" class="img-circle"style="width:25px;height:25px; ">QC</p></a>
        <hr style="margin-top:-1px;">
