--- a/productfeed.html
+++ b/productfeed.html
@@ -65,7 +65,7 @@ Weight:10.1 lbs
 
   
 <a href="product.html" style="text-decoration:none;color:grey;">
-  <div class="thumbnail" >
+  <div class="thumbnail" style="margin-top:-15px;" >
     <p> <img src="images/dp1.jpg" class="img-circle"style="width:30px;height:30px; float:left;"><p style="float:left;margin-top:3px;color:orange; "> &nbsp;&nbsp;@Gian Javelona</b></p><p style="font-size:12px;float:left;margin-top:25px;margin-left:-88px;">3h ago</p></span>
     <div style="margin-left:10px;margin-right:10px;">
      <img src="images/b2.jpg" style="height:300px;width:100%;"><br>
@@ -97,7 +97,7 @@ Weight:10.1 lbs
 
 
 <a href="product.html" style="text-decoration:none;color:grey;">
-  <div class="thumbnail" >
+ <div class="thumbnail" style="margin-top:-15px;" >
     <p> <img src="images/dp1.jpg" class="img-circle"style="width:30px;height:30px; float:left;"><p style="float:left;margin-top:3px;color:orange; "> &nbsp;&nbsp;@Gian Javelona</b></p><p style="font-size:12px;float:left;margin-top:25px;margin-left:-88px;">3h ago</p></span>
     <div style="margin-left:10px;margin-right:10px;">
      <img src="images/b3.jpg" style="height:300px;width:100%;"><br>
@@ -129,7 +129,7 @@ Weight:10.1 lbs
 
 
 <a href="product.html" style="text-decoration:none;color:grey;">
-  <div class="thumbnail" >
+  <div class="thumbnail" style="margin-top:-15px;" >
     <p> <img src="images/dp1.jpg" class="img-circle"style="width:30px;height:30px; float:left;"><p style="float:left;margin-top:3px;color:orange; "> &nbsp;&nbsp;@Gian Javelona</b></p><p style="font-size:12px;float:left;margin-top:25px;margin-left:-88px;">3h ago</p></span>
     <div style="margin-left:10px;margin-right:10px;">
      <img src="images/b4.jpg" style="height:300px;width:100%;"><br>
@@ -160,7 +160,7 @@ Weight:10.1 lbs
         </div>
 
 <a href="product.html" style="text-decoration:none;color:grey;">
-  <div class="thumbnail" >
+  <div class="thumbnail" style="margin-top:-15px;" >
     <p> <img src="images/dp1.jpg" class="img-circle"style="width:30px;height:30px; float:left;"><p style="float:left;margin-top:3px;color:orange; "> &nbsp;&nbsp;@Gian Javelona</b></p><p style="font-size:12px;float:left;margin-top:25px;margin-left:-88px;">3h ago</p></span>
     <div style="margin-left:10px;margin-right:10px;">
      <img src="images/b5.jpg" style="height:300px;width:100%;"><br>
@@ -192,7 +192,7 @@ Weight:10.1 lbs
 
 
 <a href="product.html" style="text-decoration:none;color:grey;">
-  <div class="thumbnail" >
+  <div class="thumbnail" style="margin-top:-15px;" >
     <p> <img src="images/dp1.jpg" class="img-circle"style="width:30px;height:30px; float:left;"><p style="float:left;margin-top:3px;color:orange; "> &nbsp;&nbsp;@Gian Javelona</b></p><p style="font-size:12px;float:left;margin-top:25px;margin-left:-88px;">3h ago</p></span>
     <div style="margin-left:10px;margin-right:10px;">
      <img src="images/b6.jpg" style="height:300px;width:100%;"><br>
@@ -224,7 +224,7 @@ Weight:10.1 lbs
 
 
 <a href="product.html" style="text-decoration:none;color:grey;">
-  <div class="thumbnail" >
+  <div class="thumbnail" style="margin-top:-15px;" >
     <p> <img src="images/dp1.jpg" class="img-circle"style="width:30px;height:30px; float:left;"><p style="float:left;margin-top:3px;color:orange; "> &nbsp;&nbsp;@Gian Javelona</b></p><p style="font-size:12px;float:left;margin-top:25px;margin-left:-88px;">3h ago</p></span>
     <div style="margin-left:10px;margin-right:10px;">
      <img src="images/b7.jpg" style="height:300px;width:100%;"><br>
@@ -255,7 +255,7 @@ Weight:10.1 lbs
         </div>
 
   <a href="product.html" style="text-decoration:none;color:grey;">
-  <div class="thumbnail" >
+  <div class="thumbnail" style="margin-top:-15px;" >
     <p> <img src="images/dp1.jpg" class="img-circle"style="width:30px;height:30px; float:left;"><p style="float:left;margin-top:3px;color:orange; "> &nbsp;&nbsp;@Gian Javelona</b></p><p style="font-size:12px;float:left;margin-top:25px;margin-left:-88px;">3h ago</p></span>
     <div style="margin-left:10px;margin-right:10px;">
      <img src="images/b8.jpg" style="height:300px;width:100%;"><br>
@@ -287,7 +287,7 @@ Weight:10.1 lbs
 
 
   <a href="product.html" style="text-decoration:none;color:grey;">
-  <div class="thumbnail" >
+  <div class="thumbnail" style="margin-top:-15px;" >
     <p> <img src="images/dp1.jpg" class="img-circle"style="width:30px;height:30px; float:left;"><p style="float:left;margin-top:3px;color:orange; "> &nbsp;&nbsp;@Gian Javelona</b></p><p style="font-size:12px;float:left;margin-top:25px;margin-left:-88px;">3h ago</p></span>
     <div style="margin-left:10px;margin-right:10px;">
      <img src="images/b9.jpg" style="height:300px;width:100%;"><br>
