--- a/productfeed.html
+++ b/productfeed.html
@@ -310,7 +310,7 @@ Display: 19.5" HD+ LED Backlight (1600x900)
 Dimensions: (W X D X H) 19.3" x 1.3" x 12.7"
 Weight:10.1 lbs
 </p>
-<p style="float:left;margin-top:3px;color:orange; margin-top:4px;margin-left:-10px; "> &nbsp;&nbsp;@Mark Concio</b></p>:<p style="float:left;margin-top:3px; margin-top:4;margin-left:10px; "> I love this bag</b></p></p>
+<p style="float:left;margin-top:3px;color:orange; margin-top:4px;margin-left:-10px; "> &nbsp;&nbsp;@Mark Concio</b></p>:<p style="float:left;margin-top:3px; margin-top:4;margin-left:10px; "> I love this bags</b></p></p>
 
 
        
