--- a/profile.html
+++ b/profile.html
@@ -33,9 +33,9 @@
  <center>
 
 
-    <img src="images/cover.jpg" class="img-responsive;" style="margin-top:-5px;">
+   
     <div class="thumbnail" >
-
+ <img src="images/cover.jpg" class="img-responsive;" >
     <p> <img src="images/dp1.jpg" class="img-circle"style="width:100px;height:100px; float:left;margin-top:-35px;position:relative;"><br></p>
  
 
