--- a/profile.html
+++ b/profile.html
@@ -35,7 +35,7 @@
 
    
     <div class="thumbnail" >
- <img src="images/cover.jpg" class="img-responsive;" >
+ <img src="images/cover.jpg" class="img-responsive;" style="height:120px; margin-left:-5px;margin-top:-5px;" >
     <p> <img src="images/dp1.jpg" class="img-circle"style="width:100px;height:100px; float:left;margin-top:-35px;position:relative;"><br></p>
  
 
