--- a/profile.html
+++ b/profile.html
@@ -33,9 +33,9 @@
  <center>
 
 
-   
-    <div class="thumbnail" >
- <img src="images/cover.jpg" class="img-responsive;" style="height:120px; margin-left:-5px;margin-top:-5px;" >
+   <img src="images/cover.jpg" class="img-responsive;" style="width:100%;" >
+    <div class="thumbnail">
+ 
     <p> <img src="images/dp1.jpg" class="img-circle"style="width:100px;height:100px; float:left;margin-top:-35px;position:relative;"><br></p>
  
 
