--- a/profile.html
+++ b/profile.html
@@ -33,7 +33,7 @@
  <center>
 
 
-   <img src="images/cover.jpg" class="img-responsive;" style="width:100%;" >
+   <img src="images/cover.jpg" class="img-responsive;" style="width:100%;height:120px;" >
     <div class="thumbnail">
  
     <p> <img src="images/dp1.jpg" class="img-circle"style="width:100px;height:100px; float:left;margin-top:-35px;position:relative;"><br></p>
