--- a/profile.html
+++ b/profile.html
@@ -47,9 +47,10 @@
             1,119
             <span>Followers</span>
           </li>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
           <li>
             530
-            <span>Following</span>
+            <span>Testimonials</span>
           </li>
        
          
@@ -67,15 +68,15 @@
 <!-- Nav tabs -->
   <ul class="nav nav-tabs " style="background-color:white;margin-top:-15px;" role="tablist" >
     <li role="presentation" class="active" ><a href="#home" aria-controls="home" role="tab" data-toggle="tab" style="width:220px;text-align:center" >Testimonials</a></li>
-    <li role="presentation"><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab" style="width:170px; text-align:center">Store</a></li>
+    <li role="presentation"><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab" style="width:160px; text-align:center">Store</a></li>
 
   </ul>
 
   <!-- Tab panes -->
-  <div class="tab-content" >
+  <div class="tab-content"  >
     <div role="tabpanel" class="tab-pane fade in active" id="home"> 
 <div class='chat'>
- <div class='body'>
+ <div class='body' >
     <ul>
       <li>
        <a href="chat/index.html" style="text-decoration:none;"> <img src="http://lorempixel.com/200/100/" class="img-circle"style="width:80px;height:80px;">
