--- a/profile.html
+++ b/profile.html
@@ -131,7 +131,7 @@
        
 
 
-    <div role="tabpanel" class="tab-pane fade" id="profile"><div class='chat'>
+    <div role="tabpanel" class="tab-pane fade" id="profile">
  <div class='body'>
   <!-- 3 key -->
 <div style="margin-left:9px;margin-right:20px; margin-top:10px;">
