--- a/profileviewer.html
+++ b/profileviewer.html
@@ -53,7 +53,7 @@
             <span>Testimonials</span>
           </li>
        
-         <a href="profile.html"type="button"class="btn btn-warning " style="margin-top:5px;width:200px;margin-left:35px;"><b>Follow my Store</b></a>
+         <a href="profile.html"type="button"class="btn btn-danger " style="margin-top:5px;width:200px;margin-left:35px;"><b>Follow my Store</b></a>
         </ul>
       </div>
      
