--- a/chat.html
+++ b/chat.html
@@ -44,7 +44,7 @@
  <div class='body'>
     <ul>
       <li>
-       <a href="chat/index.html" style="text-decoration:none;"> <img src="http://lorempixel.com/200/100/" class="img-circle"style="width:80px;height:80px;">
+       <a href="chat/index.html" style="text-decoration:none;"> <img src="images/b1.jpg" class="img-circle"style="width:80px;height:80px;">
         <div class='content'>
           <br>
           <h3>Nick Roach</h3>
@@ -56,7 +56,7 @@
         </div>
       </li></a>
       <li>
-        <a href="chat/index.html" style="text-decoration:none;"> <img src="http://lorempixel.com/100/100/" class="img-circle"style="width:80px;height:80px;">
+        <a href="chat/index.html" style="text-decoration:none;"> <img src="images/b2.jpg"  class="img-circle"style="width:80px;height:80px;">
         <div class='content'>
           <br>
           <h3>Kenny Sing</h3>
@@ -67,7 +67,7 @@
         </div></a>
       </li>
       <li>
-        <a href="chat/index.html" style="text-decoration:none;"> <img src="http://lorempixel.com/200/200/" class="img-circle"style="width:80px;height:80px;">
+        <a href="chat/index.html" style="text-decoration:none;"> <img src="images/b3.jpg"  class="img-circle"style="width:80px;height:80px;">
         <div class='content'>
           <br>
           <h3>Mitch Skolnik</h3>
@@ -79,7 +79,7 @@
         </div>
       </li>
       <li>
-        <a href="chat/index.html" style="text-decoration:none;"> <img src="http://lorempixel.com/300/100/" class="img-circle"style="width:80px;height:80px;">
+        <a href="chat/index.html" style="text-decoration:none;"> <img src="images/b4.jpg"  class="img-circle"style="width:80px;height:80px;">
         <div class='content'>
           <br>
           <h3>Yuriy Portnykh</h3>
@@ -90,7 +90,7 @@
         </div></a>
       </li>
       <li>
-        <a href="chat/index.html" style="text-decoration:none;"> <img src="http://lorempixel.com/500/100/" class="img-circle"style="width:80px;height:80px;">
+        <a href="chat/index.html" style="text-decoration:none;"> <img src="images/b6.jpg"  class="img-circle"style="width:80px;height:80px;">
         <div class='content'>
           <br>
           <h3>Josh Ronk</h3>
@@ -101,7 +101,7 @@
         </div></a>
       </li>
        <li>
-         <a href="chat/index.html" style="text-decoration:none;"><img src="http://lorempixel.com/300/300/" class="img-circle"style="width:80px;height:80px;">
+         <a href="chat/index.html" style="text-decoration:none;"><img src="images/b5.jpg" class="img-circle"style="width:80px;height:80px;">
         <div class='content'>
           <br>
           <h3>Carlos</h3>
@@ -112,7 +112,7 @@
         </div>
       </li>
        <li>
-        <a href="chat/index.html" style="text-decoration:none;"> <img src="http://lorempixel.com/200/200/" class="img-circle"style="width:80px;height:80px;">
+        <a href="chat/index.html" style="text-decoration:none;"> <img src="images/b7.jpg"  class="img-circle"style="width:80px;height:80px;">
         <div class='content'>
           <br>
           <h3>Steban</h3>
@@ -123,7 +123,7 @@
         </div></a>
       </li>
        <li>
-         <a href="chat/index.html" style="text-decoration:none;"><img src="http://lorempixel.com/300/300/" class="img-circle"style="width:80px;height:80px;">
+         <a href="chat/index.html" style="text-decoration:none;"><img src="images/b8.jpg"  class="img-circle"style="width:80px;height:80px;">
         <div class='content'>
           <br>
           <h3>Bella</h3>
@@ -134,7 +134,7 @@
         </div></a>
       </li>
       <li>
-         <a href="chat/index.html" style="text-decoration:none;"><img src="http://lorempixel.com/100/500/" class="img-circle"style="width:80px;height:80px;">
+         <a href="chat/index.html" style="text-decoration:none;"><img src="images/b1.jpg"  class="img-circle"style="width:80px;height:80px;">
         <div class='content'>
           <br>
           <h3>Debzel</h3>
@@ -152,7 +152,7 @@
  <div class='body'>
     <ul>
       <li>
-       <a href="product1.html" style="text-decoration:none;"> <img src="http://lorempixel.com/200/100/" class="img-circle"style="width:40px;height:40px;">
+       <a href="product1.html" style="text-decoration:none;"> <img src="images/b1.jpg"  class="img-circle"style="width:40px;height:40px;">
         <div class='content'>
           <br>
           <h3>Nick Roach liked your post</h3>
@@ -163,7 +163,7 @@
         </div>
       </li></a>
       <li>
-         <a href="product1.html" style="text-decoration:none;"> <img src="http://lorempixel.com/300/100/" class="img-circle"style="width:40px;height:40px;">
+         <a href="product1.html" style="text-decoration:none;"> <img src="images/b2.jpg"  class="img-circle"style="width:40px;height:40px;">
         <div class='content'>
           <br>
           <h3>Nick Roach commented your post</h3>
@@ -174,7 +174,7 @@
         </div></a>
       </li>
       <li>
-         <a href="product1.html" style="text-decoration:none;"> <img src="http://lorempixel.com/200/200/" class="img-circle"style="width:40px;height:40px;">
+         <a href="product1.html" style="text-decoration:none;"> <img src="images/b3.jpg"  class="img-circle"style="width:40px;height:40px;">
         <div class='content'>
           <br>
           <h3>Nick Roach liked your post</h3>
@@ -185,7 +185,7 @@
         </div>
       </li>
       <li>
-         <a href="product1.html" style="text-decoration:none;"> <img src="http://lorempixel.com/400/100/" class="img-circle"style="width:40px;height:40px;">
+         <a href="product1.html" style="text-decoration:none;"> <img src="images/b4.jpg"  class="img-circle"style="width:40px;height:40px;">
         <div class='content'>
           <br>
           <h3>Carla Roach liked your post</h3>
@@ -196,7 +196,7 @@
         </div></a>
       </li>
       <li>
-         <a href="product1.html" style="text-decoration:none;"> <img src="http://lorempixel.com/100/100/" class="img-circle"style="width:40px;height:40px;">
+         <a href="product1.html" style="text-decoration:none;"> <img src="images/b6.jpg"  class="img-circle"style="width:40px;height:40px;">
         <div class='content'>
           <br>
           <h3>Jason Roach liked your post</h3>
@@ -207,7 +207,7 @@
         </div></a>
       </li>
        <li>
-          <a href="product1.html" style="text-decoration:none;"> <img src="http://lorempixel.com/300/300/" class="img-circle"style="width:40px;height:40px;">
+          <a href="product1.html" style="text-decoration:none;"> <img src="images/b5.jpg"  class="img-circle"style="width:40px;height:40px;">
         <div class='content'>
           <br>
           <h3>Roach commented on  your post</h3>
@@ -218,7 +218,7 @@
         </div>
       </li>
        <li>
-      <a href="product1.html" style="text-decoration:none;"> <img src="http://lorempixel.com/400/100/" class="img-circle"style="width:40px;height:40px;">
+      <a href="product1.html" style="text-decoration:none;"> <img src="images/b7.jpg"  class="img-circle"style="width:40px;height:40px;">
         <div class='content'>
           <br>
           <h3>Nici liked your post</h3>
@@ -229,7 +229,7 @@
         </div></a>
       </li>
        <li>
-      <a href="product1.html" style="text-decoration:none;"> <img src="http://lorempixel.com/200/100/" class="img-circle"style="width:40px;height:40px;">
+      <a href="product1.html" style="text-decoration:none;"> <img src="images/b8.jpg"  class="img-circle"style="width:40px;height:40px;">
         <div class='content'>
           <br>
           <h3>Justin liked your post</h3>
@@ -240,7 +240,7 @@
         </div></a>
       </li>
       <li>
-          <a href="product1.html" style="text-decoration:none;"> <img src="http://lorempixel.com/500/100/" class="img-circle"style="width:40px;height:40px;">
+          <a href="product1.html" style="text-decoration:none;"> <img src="images/b2.jpg"  class="img-circle"style="width:40px;height:40px;">
         <div class='content'>
           <br>
           <h3>Belle liked your post</h3>
@@ -251,7 +251,7 @@
         </div></a>
       </li>
       <li>
-    <a href="product1.html" style="text-decoration:none;"> <img src="http://lorempixel.com/200/100/" class="img-circle"style="width:40px;height:40px;">
+    <a href="product1.html" style="text-decoration:none;"> <img src="images/b4.jpg"  class="img-circle"style="width:40px;height:40px;">
         <div class='content'>
           <br>
           <h3>Nick Roach liked your post</h3>
@@ -262,7 +262,7 @@
         </div>
       </li></a>
       <li>
-      <a href="product1.html" style="text-decoration:none;"> <img src="http://lorempixel.com/300/100/" class="img-circle"style="width:40px;height:40px;">
+      <a href="product1.html" style="text-decoration:none;"> <img src="images/b4.jpg" class="img-circle"style="width:40px;height:40px;">
         <div class='content'>
           <br>
           <h3>Nick Roach commented your post</h3>
@@ -273,7 +273,7 @@
         </div></a>
       </li>
       <li>
-       <a href="product1.html" style="text-decoration:none;"> <img src="http://lorempixel.com/200/200/" class="img-circle"style="width:40px;height:40px;">
+       <a href="product1.html" style="text-decoration:none;"> <img src="images/b6.jpg"  class="img-circle"style="width:40px;height:40px;">
         <div class='content'>
           <br>
           <h3>Nick Roach liked your post</h3>
@@ -284,7 +284,7 @@
         </div>
       </li>
       <li>
-         <a href="product1.html" style="text-decoration:none;"> <img src="http://lorempixel.com/400/100/" class="img-circle"style="width:40px;height:40px;">
+         <a href="product1.html" style="text-decoration:none;"> <img src="images/b7.jpg"  class="img-circle"style="width:40px;height:40px;">
         <div class='content'>
           <br>
           <h3>Carla Roach liked your post</h3>
@@ -306,7 +306,7 @@
         </div></a>
       </li>
        <li>
-        <a href="product1.html" style="text-decoration:none;"> <img src="http://lorempixel.com/300/300/" class="img-circle"style="width:40px;height:40px;">
+        <a href="product1.html" style="text-decoration:none;"> <img src="images/b3.jpg"  class="img-circle"style="width:40px;height:40px;">
         <div class='content'>
           <br>
           <h3>Roach commented on  your post</h3>
@@ -317,7 +317,7 @@
         </div>
       </li>
        <li>
-      <a href="product1.html" style="text-decoration:none;"> <img src="http://lorempixel.com/400/100/" class="img-circle"style="width:40px;height:40px;">
+      <a href="product1.html" style="text-decoration:none;"> <img src="images/b9.jpg"  class="img-circle"style="width:40px;height:40px;">
         <div class='content'>
           <br>
           <h3>Nici liked your post</h3>
@@ -328,7 +328,7 @@
         </div></a>
       </li>
        <li>
-        <a href="product1.html" style="text-decoration:none;"> <img src="http://lorempixel.com/200/100/" class="img-circle"style="width:40px;height:40px;">
+        <a href="product1.html" style="text-decoration:none;"> <img src="images/b2.jpg"  class="img-circle"style="width:40px;height:40px;">
         <div class='content'>
           <br>
           <h3>Justin liked your post</h3>
@@ -339,7 +339,7 @@
         </div></a>
       </li>
       <li>
-         <a href="product1.html"style="text-decoration:none;"> <img src="http://lorempixel.com/500/100/" class="img-circle"style="width:40px;height:40px;">
+         <a href="product1.html"style="text-decoration:none;"> <img src="images/b4.jpg"  class="img-circle"style="width:40px;height:40px;">
         <div class='content'>
           <br>
           <h3>Belle liked your post</h3>
