--- a/socialfeedcontent.html
+++ b/socialfeedcontent.html
@@ -30,7 +30,7 @@
  
 <!-- Nav tabs -->
   <ul class="nav nav-tabs navbar-fixed-top" style="background-color:white;" role="tablist">
- <li>   <a href="socialfeed.html" role="presentation"   style="width:200px;text-align:center" >Write Post</a></li>
+ <li>   <a href="socialfeed.html" role="presentation"   style="width:200px;text-align:center;margin-left:20px;" >Write Post</a></li>
     <li>   <a href="socialfeed.html" role="presentation"   style="width:150px;text-align:center" >Share Photo</a></li>
      
   </ul>
