--- a/socialfeedcontent.html
+++ b/socialfeedcontent.html
@@ -31,7 +31,7 @@
 <!-- Nav tabs -->
   <ul class="nav nav-tabs navbar-fixed-top" style="background-color:white;" role="tablist">
  <li>   <a href="socialfeedpost.html" role="presentation"   style="width:200px;text-align:center;margin-left:20px;" ><span class="glyphicon glyphicon-edit" aria-hidden="true" style="margin-right:10px;"></span>Write Post</a></li>
-    <li>   <a href="socialfeed.html" role="presentation"   style="width:150px;text-align:center" ><span class="glyphicon glyphicon-camera" aria-hidden="true" style="margin-right:10px;"></span>Share Photo</a></li>
+    <li>   <a href="socialfeedphoto.html" role="presentation"   style="width:150px;text-align:center" ><span class="glyphicon glyphicon-camera" aria-hidden="true" style="margin-right:10px;"></span>Share Photo</a></li>
      
   </ul>
 
