--- a/profilecomment.html
+++ b/profilecomment.html
@@ -37,8 +37,8 @@
      <textarea class="form-control" rows="4" style="width:350px;border: 0;
     box-shadow: none;"placeholder="What's on your mind?"></textarea><Br>
      <hr style="margin-top:35px;">
-      <a href="profileviewer.html"type="button"class="btn btn-warning " style="margin-top:-10px;margin-left:270px;"><b>Post Testimonial</b></a>
-       
+      <a href="profileviewer.html"type="button"class="btn btn-warning " style="margin-top:-10px;margin-left:260px;"><b>Post Testimonial</b></a><br>
+       <br>
     
       </div>
         </div>
