--- a/profilefollow.html
+++ b/profilefollow.html
@@ -53,7 +53,7 @@
             <span>Testimonials</span>
           </li>
        
-         <a href="profile.html"type="button"class="btn btn-warning " style="margin-top:5px;width:200px;margin-left:35px;"><b>Edit my store</b></a>
+         <a href="profile.html"type="button"class="btn btn-danger " style="margin-top:5px;width:200px;margin-left:35px;"><b>Follow my Store</b></a>
         </ul>
       </div>
      
@@ -250,3 +250,9 @@
 
 </body>
 </html>
+
+
+
+
+
+ <!-- //-->
