--- a/socialfeed.html
+++ b/socialfeed.html
@@ -28,7 +28,7 @@
 
 
  
-<!-- Nav tabs -->
+<!-- Nav tabs 
   <ul class="nav nav-tabs navbar-fixed-top" style="background-color:white;" role="tablist">
     <li role="presentation" class="active" ><a href="#home" aria-controls="home" role="tab" data-toggle="tab" style="width:200px;text-align:center" >Following</a></li>
     <li role="presentation"><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab" style="width:180px; text-align:center">Community</a></li>
@@ -42,7 +42,7 @@
  <div class='body' >
  <center>
 
-  <div style="margin-top:80px;">
+  <div style="margin-top:5px;">
  <a href="product.html" style="text-decoration:none;color:grey;">
   <div class="thumbnail" >
     <p> <img src="images/dp1.jpg" class="img-circle"style="width:30px;height:30px; float:left;"><p style="float:left;margin-top:3px;color:orange; "> &nbsp;&nbsp;@Gian Javelona</b></p><p style="font-size:12px;float:left;margin-top:25px;margin-left:-88px;">3h ago</p></span>
